--- a/app/globals.css
+++ b/app/globals.css
@@ -465,8 +465,7 @@
 
   /* Sidebar */
   .sidebar {
-    @apply hidden h-screen w-[90px] flex-col overflow-auto px-5 py-7 sm:flex lg:w-[280px] xl:w-[325px];
-  }
+ @apply hidden h-screen w-[90px] flex-col overflow-auto px-5 pt-7 sm:flex lg:w-[280px] xl:w-[325px];  }
   .sidebar::-webkit-scrollbar {
     width: 0px;
     height: 0px;
